--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,7 +9,40 @@
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
     <script src='script.js'></script>
 </head>
+
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <a href="#inicio">Inicio</a>
+            </li>
+            <li>
+                <a href="#proyectos">Proyectos</a>
+            </li>
+            <li>
+                <a href="#habilidades">Habilidades</a>
+            </li>
+        </ul>
+    </nav>
+    <header>
+        <h1>Kevin Arauz</h1>
+        <p>👾 Jr.Developer | Jr.Software Engineer | Jr.FullStack</p>
+    </header>
+
+    <section id="inicio">
+        <h1>Portafolio</h1>
+        <p>Este es mi portafolio</p>
+    </section>
+
+    <section id="proyectos">
+
+    </section>
+    <section id="habilidades">
+
+    </section>
+    <footer>
+        <p>Contactos: kjarj14@gmail.com</p>
+    </footer>
 </body>
+
 </html>
