--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -6,43 +6,75 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Portafolio Kjarj54</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <!-- css -->
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+
+    <!-- bootstrap 4.3.1 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!--js-->
     <script src='script.js'></script>
+    <!-- Enlace al conjunto de iconos Bootstrap desde CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- Preconectar con el servidor de fuentes de Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- Preconectar con el servidor de fuentes de Google con la opción de crossorigin -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ 
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="#inicio">Inicio</a>
-            </li>
-            <li>
-                <a href="#proyectos">Proyectos</a>
-            </li>
-            <li>
-                <a href="#habilidades">Habilidades</a>
-            </li>
-        </ul>
-    </nav>
-    <header>
-        <h1>Kevin Arauz</h1>
-        <p>👾 Jr.Developer | Jr.Software Engineer | Jr.FullStack</p>
-    </header>
+    <div class="container">
+        <nav>
+            <ul>
+                <li>
+                    <a href="#inicio">Inicio</a>
+                </li>
+                <li>
+                    <a href="#proyectos">Proyectos</a>
+                </li>
+                <li>
+                    <a href="#habilidades">Habilidades</a>
+                </li>
+            </ul>
+        </nav>
 
-    <section id="inicio">
-        <h1>Portafolio</h1>
-        <p>Este es mi portafolio</p>
-    </section>
+        <header>
+            <h1>Kevin Arauz</h1>
+            <div class="containerLinks">
+                <p>👾 Jr.Developer | Jr.Software Engineer | Jr.FullStack</p>
+                <a class="githubLink" href="https://github.com/kjarj54">
+                    <i class="bi bi-github"></i>
+                </a>
+            </div>
+        </header>
 
-    <section id="proyectos">
+        <section id="inicio">
+            <h1>Portafolio</h1>
+            <p>Este es mi portafolio</p>
+        </section>
 
-    </section>
-    <section id="habilidades">
+        <section id="proyectos">
 
-    </section>
+        </section>
+        <section id="habilidades">
+
+        </section>
+    </div>
     <footer>
         <p>Contactos: kjarj14@gmail.com</p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
