--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -22,7 +22,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- Preconectar con el servidor de fuentes de Google con la opción de crossorigin -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- 
+
 </head>
 
 <body>
@@ -38,7 +38,13 @@
                 <li>
                     <a href="#habilidades">Habilidades</a>
                 </li>
+                <li>
+                    <button id="toggle-button">
+                        <i class="bi bi-sun"></i>
+                    </button>
+                </li>
             </ul>
+
         </nav>
 
         <header>
