--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+
     <div class="container">
         <nav>
             <ul>
@@ -48,11 +49,23 @@
         </nav>
 
         <header>
+            <picture>
+                <img  class="mainImage" src="resources/" alt="Profile image">
+            </picture>
             <h1>Kevin Arauz</h1>
             <div class="containerLinks">
                 <p>👾 Jr.Developer | Jr.Software Engineer | Jr.FullStack</p>
                 <a class="githubLink" href="https://github.com/kjarj54">
                     <i class="bi bi-github"></i>
+                </a>
+                <a class="linkedinLink" href="https://www.linkedin.com/in/arauzkj/">
+                    <i class="bi bi-linkedin"></i>
+                </a>
+                <a class = "curriculumLink" href="">
+                    <i class="bi bi-file-person"></i>
+                </a>
+                <a class= "stackoverflowLink" href="https://stackoverflow.com/users/19321823/arauzkj">
+                    <i class="bi bi-stack-overflow"></i>
                 </a>
             </div>
         </header>
