--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -50,7 +50,7 @@
 
         <header>
             <picture>
-                <img  class="mainImage" src="resources/" alt="Profile image">
+                <img class="mainImage" src="resources/" alt="Profile image">
             </picture>
             <h1>Kevin Arauz</h1>
             <div class="containerLinks">
@@ -61,10 +61,10 @@
                 <a class="linkedinLink" href="https://www.linkedin.com/in/arauzkj/">
                     <i class="bi bi-linkedin"></i>
                 </a>
-                <a class = "curriculumLink" href="">
+                <a class="curriculumLink" href="">
                     <i class="bi bi-file-person"></i>
                 </a>
-                <a class= "stackoverflowLink" href="https://stackoverflow.com/users/19321823/arauzkj">
+                <a class="stackoverflowLink" href="https://stackoverflow.com/users/19321823/arauzkj">
                     <i class="bi bi-stack-overflow"></i>
                 </a>
             </div>
@@ -72,15 +72,19 @@
 
         <section id="inicio">
             <h1>Portafolio</h1>
-            <p>Este es mi portafolio</p>
-        </section>
-
-        <section id="proyectos">
-
+            <p>
+                Hi! I'm Kevin, a passionate programmer and systems engineering student with a strong commitment to turn
+                technology into practical and creative solutions. My goal is to grow as a professional in the world of
+                web development and become a high performing Jr. Fullstack or Frontend Developer.
+            </p>
         </section>
         <section id="habilidades">
 
         </section>
+        <section id="proyectos">
+
+        </section>
+
     </div>
     <footer>
         <p>Contactos: kjarj14@gmail.com</p>
