--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -50,7 +50,7 @@
 
         <header>
             <picture>
-                <img class="mainImage" src="resources/" alt="Profile image">
+                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
             </picture>
             <h1>Kevin Arauz</h1>
             <div class="containerLinks">
