--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -40,6 +40,9 @@
                     <a href="#habilidades">Habilidades</a>
                 </li>
                 <li>
+                    <a href="#formacion">Formacion</a>
+                </li>
+                <li>
                     <button id="toggle-button">
                         <i class="bi bi-sun"></i>
                     </button>
@@ -77,8 +80,17 @@
                 technology into practical and creative solutions. My goal is to grow as a professional in the world of
                 web development and become a high performing Jr. Fullstack or Frontend Developer.
             </p>
+            <p>
+                I'm excited to join a passionate team of professionals and contribute my enthusiasm and skills to the
+                development world! I'm always open to new connections and opportunities, so don't hesitate to contact
+                me.
+            </p>
         </section>
         <section id="habilidades">
+
+        </section>
+
+        <section id="formacion">
 
         </section>
         <section id="proyectos">
@@ -86,8 +98,12 @@
         </section>
 
     </div>
-    <footer>
-        <p>Contactos: kjarj14@gmail.com</p>
+    <footer id="footerId">
+        <div>
+            <i class="bi bi-envelope"></i>
+            <p>Contactos: kjarj14@gmail.com</p>
+        </div>
+
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
