--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -28,7 +28,7 @@
 <body>
 
     <div class="container">
-        <nav>
+        <nav id="navBar">
             <ul>
                 <li>
                     <a href="#inicio">Inicio</a>
@@ -98,12 +98,16 @@
         </section>
 
     </div>
-    <footer id="footerId">
-        <div>
+    <footer class="footer" id="footer">
+        <div id="containerContacts">
             <i class="bi bi-envelope"></i>
-            <p>Contactos: kjarj14@gmail.com</p>
+            <p>Contacts: kjarj14@gmail.com</p>
         </div>
-
+        <div>
+            <a href="#navBar" class="back-to-top" id="back-to-top-button">
+                <i class="bi bi-house"></i>
+            </a>
+        </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
