--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -94,7 +94,17 @@
 
         </section>
         <section id="proyectos">
-
+<picture>
+                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
+            </picture><picture>
+                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
+            </picture><picture>
+                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
+            </picture><picture>
+                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
+            </picture><picture>
+                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
+            </picture>
         </section>
 
     </div>
