--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -10,6 +10,8 @@
     <!-- css -->
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
 
+    <link rel="icon" type="image/jpg" href="resources/Example.jpg" />
+
     <!-- bootstrap 4.3.1 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -94,20 +96,11 @@
 
         </section>
         <section id="proyectos">
-<picture>
-                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
-            </picture><picture>
-                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
-            </picture><picture>
-                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
-            </picture><picture>
-                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
-            </picture><picture>
-                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
-            </picture>
+            
         </section>
 
     </div>
+
     <footer class="footer" id="footer">
         <div id="containerContacts">
             <i class="bi bi-envelope"></i>
