--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- Preconectar con el servidor de fuentes de Google con la opción de crossorigin -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <!-- Devicon V2.15.1 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
 </head>
 
 <body>
