--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
         <nav id="navBar">
             <ul>
                 <li>
-                    <a href="#inicio">Inicio</a>
+                    <a href="#inicio">Home</a>
                 </li>
                 <li>
-                    <a href="#proyectos">Proyectos</a>
+                    <a href="#habilidades">Abilities</a>
                 </li>
                 <li>
-                    <a href="#habilidades">Habilidades</a>
+                    <a href="#formacion">Training</a>
                 </li>
                 <li>
-                    <a href="#formacion">Formacion</a>
+                    <a href="#proyectos">Proyects</a>
                 </li>
                 <li>
                     <button id="toggle-button">
@@ -83,7 +83,7 @@
             <p>
                 Hi! I'm Kevin, a passionate programmer and systems engineering student with a strong commitment to turn
                 technology into practical and creative solutions. My goal is to grow as a professional in the world of
-                web development and become a high performing Jr. Fullstack or Frontend Developer.
+                web development and become a high performing Fullstack or Frontend Developer.
             </p>
             <p>
                 I'm excited to join a passionate team of professionals and contribute my enthusiasm and skills to the
@@ -92,7 +92,71 @@
             </p>
         </section>
         <section id="habilidades">
+            <h1>Abilities</h1>
+            <div class="containerSkills">
+                <div class="skill">
+                    <i class="devicon-html5-plain"></i>
+                    <p>HTML5</p>
+                </div>
+                <div class="skill">
+                    <i class="devicon-css3-plain"></i>
+                    <p>CSS3</p>
+                </div>
+                <div class="skill">
+                    <i class="devicon-javascript-plain"></i>
+                    <p>JavaScript</p>
+                </div>
+                <div class="skill">
+                    <i class="devicon-bootstrap-plain"></i>
+                    <p>Bootstrap</p>
+                </div>
+                <div class="skill">
+                    <i class="devicon-github-plain"></i>
+                    <p>Github</p>
+                </div>
 
+                <div class="skill">
+                    <i class="devicon-python-plain"></i>
+                    <p>Python</p>
+                </div>
+
+                <div class="skill">
+                    <i class="devicon-cplusplus-plain"></i>
+                    <p>C++</p>
+                </div>
+                <div class="skill">
+                    <i class="devicon-csharp-plain"></i>
+                    <p>C#</p>
+                </div>
+                <div class="skill">
+                    <i class="devicon-java-plain"></i>
+                    <p>Java</p>
+                </div>
+                <div class="skill">
+                    <i class="devicon-linux-plain"></i>
+                    <p>Linux</p>
+                </div>
+                <div class="skill">
+                    <i class="devicon-visualstudio-plain"></i>
+                    <p>Visual Studio</p>
+                </div>
+                <div class="skill">
+                    <i class="devicon-visualstudio-plain"></i>
+                    <p>Visual Studio Code</p>
+                </div>
+                <div class="skill">
+                    <div class="icon-container">
+                        <img src="resources/NetBeans.png" alt="NetBeans">
+                    </div>
+                    <p>Netbeans</p>
+                </div>
+                <div class="skill">
+                    <div class="icon-container">
+                        <img src="resources/plsql.png" alt="PL/SQL">
+                    </div>
+                    <p>PL/SQL</p>
+                </div>
+            </div>
         </section>
 
         <section id="formacion">
