--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
         </section>
         <section id="habilidades">
             <h1>Abilities</h1>
+            <p>
+                I have experience in the following technologies:
+            </p>
             <div class="containerSkills">
                 <div class="skill">
                     <i class="devicon-html5-plain"></i>
@@ -160,6 +163,51 @@
         </section>
 
         <section id="formacion">
+            <h1>Training</h1>
+            <div class="training-container">
+                
+                <div class="training-item">
+                    <img src="" alt="">
+                    <h2>Systems Engineering</h2>
+                    <p></p>
+                </div>
+
+                <div class="training-item">
+                    <img src="" alt="">
+                    <h2>Systems Engineering</h2>
+                    <p></p>
+                </div>
+
+                <div class="training-item">
+                    <img src="" alt="">
+                    <h2>Systems Engineering</h2>
+                    <p></p>
+                </div>
+
+                <div class="training-item">
+                    <img src="" alt="">
+                    <h2>Systems Engineering</h2>
+                    <p></p>
+                </div>
+
+                <div class="training-item">
+                    <img src="" alt="">
+                    <h2>Systems Engineering</h2>
+                    <p></p>
+                </div>
+
+                <div class="training-item">
+                    <img src="" alt="">
+                    <h2>Systems Engineering</h2>
+                    <p></p>
+                </div>
+
+                <div class="training-item">
+                    <img src="" alt="">
+                    <h2>Systems Engineering</h2>
+                    <p></p>
+                </div>
+            </div>
 
         </section>
         <section id="proyectos">
