--- a/index.html
+++ b/index.html
@@ -165,48 +165,89 @@
         <section id="formacion">
             <h1>Training</h1>
             <div class="training-container">
-                
-                <div class="training-item">
-                    <img src="" alt="">
-                    <h2>Systems Engineering</h2>
-                    <p></p>
-                </div>
+                <a href="https://www.una.ac.cr/">
+                    <div class="training-item">
+                        <img src="resources/UNA.png" alt="UNA">
+                        <h2>Current Student Information Systems Engineering</h2>
 
-                <div class="training-item">
-                    <img src="" alt="">
-                    <h2>Systems Engineering</h2>
-                    <p></p>
-                </div>
+                    </div>
+                </a>
 
-                <div class="training-item">
-                    <img src="" alt="">
-                    <h2>Systems Engineering</h2>
-                    <p></p>
-                </div>
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/data-visualization">
+                    <div class="training-item">
+                        <img src="resources/Data Visualization.jpg" alt="data-visualization">
+                        <h2>Data Visualization</h2>
+                        <h3>November 2023</h3>
+                    </div>
+                </a>
 
-                <div class="training-item">
-                    <img src="" alt="">
-                    <h2>Systems Engineering</h2>
-                    <p></p>
-                </div>
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/front-end-development-libraries">
+                    <div class="training-item">
+                        <img src="resources/Front End Development Libraries.jpg" alt="front-end-development-libraries">
+                        <h2>Front End Development Libraries</h2>
+                        <h3>September 2023</h3>
+                    </div>
+                </a>
 
-                <div class="training-item">
-                    <img src="" alt="">
-                    <h2>Systems Engineering</h2>
-                    <p></p>
-                </div>
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/javascript-algorithms-and-data-structures">
+                    <div class="training-item">
+                        <img src="resources/JavaScript Algorithms and Data Structures.jpg"
+                            alt="javascript-algorithms-and-data-structures">
+                        <h2>JavaScript Algorithms and Data Structures</h2>
+                        <h3>August 2023</h3>
+                    </div>
+                </a>
 
-                <div class="training-item">
-                    <img src="" alt="">
-                    <h2>Systems Engineering</h2>
-                    <p></p>
-                </div>
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/responsive-web-design">
+                    <div class="training-item">
+                        <img src="resources/Responsive Web Design.jpg" alt="responsive-web-design">
+                        <h2>Responsive Web Design</h2>
+                        <h3>June 2023</h3>
+                    </div>
+                </a>
 
-                <div class="training-item">
-                    <img src="" alt="">
-                    <h2>Systems Engineering</h2>
-                    <p></p>
-                </div>
+                <a href="https://drive.google.com/file/d/1QVx3fL4K-V1ILbpifHCNQfP0htSu5Wz6/view?usp=sharing">
+                    <div class="training-item">
+                        <img src="resources/activate_certificate cssparte2.jpg" alt="">
+                        <h2>Curso de introducción al desarrollo web: HTML y CSS(2/2)</h2>
+                        <h3>may 2023</h3>
+                    </div>
+                </a>
+
+                <a href="https://drive.google.com/file/d/15hkOQxnKxobtzDIPr3_3gaOND4p5z2kI/view?usp=sharing">
+                    <div class="training-item">
+                        <img src="resources/activate_certificate.jpg" alt="">
+                        <h2>Curso de introducción al desarrollo web: HTML y CSS(1/2)</h2>
+                        <h3>may 2023</h3>
+                    </div>
+                </a>
+
+                <a href="https://courses.cognitiveclass.ai/certificates/b06b30b11a6d44f5a50ce5eae05d308c">
+                    <div class="training-item">
+                        <img src="resources/IBM PY0101EN CertificateCognitive Class.jpg"
+                            alt="Python-101-for-Data-Science">
+                        <h2>Python 101 for Data Science</h2>
+                        <h3>may 2023</h3>
+                    </div>
+                </a>
+
+                <a href="https://drive.google.com/file/d/1-HS8vXIR-MOjfWD99mfJ3Pb6aaamEbqp/view?usp=sharing">
+                    <div class="training-item">
+                        <img src="resources/KevinArauz-NDG Linux Unhatc-certificate.jpg"
+                            alt="NDGLinuxUnhatc-certificate">
+                        <h2>NDG Linux Unhatc-certificate</h2>
+                        <h3>march 2023</h3>
+                    </div>
+                </a>
+
+                <a href="https://drive.google.com/file/d/10pmRiwSlnAZjOTmqdTFOjwxdXViP4uUm/view?usp=sharing">
+                    <div class="training-item">
+                        <img src="resources/KevinArauz-NDG Linux Essent-certificate.jpg"
+                            alt="NDGLinuxEssent-certificate">
+                        <h2>NDG Linux Unhatc-certificate</h2>
+                        <h3>march 2023</h3>
+                    </div>
+                </a>
             </div>
 
         </section>
