--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <section id="formacion">
             <h1>Training</h1>
             <div class="training-container">
-                <a href="https://www.una.ac.cr/">
+                <a href="https://www.una.ac.cr/" target="_blank">
                     <div class="training-item">
                         <img src="resources/UNA.png" alt="UNA">
                         <h2>Current Student Information Systems Engineering</h2>
@@ -173,7 +173,7 @@
                     </div>
                 </a>
 
-                <a href="https://www.freecodecamp.org/certification/ArauzKJ/data-visualization">
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/data-visualization" target="_blank">
                     <div class="training-item">
                         <img src="resources/Data Visualization.jpg" alt="data-visualization">
                         <h2>Data Visualization</h2>
@@ -181,7 +181,7 @@
                     </div>
                 </a>
 
-                <a href="https://www.freecodecamp.org/certification/ArauzKJ/front-end-development-libraries">
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/front-end-development-libraries" target="_blank">
                     <div class="training-item">
                         <img src="resources/Front End Development Libraries.jpg" alt="front-end-development-libraries">
                         <h2>Front End Development Libraries</h2>
@@ -189,7 +189,7 @@
                     </div>
                 </a>
 
-                <a href="https://www.freecodecamp.org/certification/ArauzKJ/javascript-algorithms-and-data-structures">
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/javascript-algorithms-and-data-structures" target="_blank">
                     <div class="training-item">
                         <img src="resources/JavaScript Algorithms and Data Structures.jpg"
                             alt="javascript-algorithms-and-data-structures">
@@ -198,7 +198,7 @@
                     </div>
                 </a>
 
-                <a href="https://www.freecodecamp.org/certification/ArauzKJ/responsive-web-design">
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/responsive-web-design" target="_blank">
                     <div class="training-item">
                         <img src="resources/Responsive Web Design.jpg" alt="responsive-web-design">
                         <h2>Responsive Web Design</h2>
@@ -206,7 +206,7 @@
                     </div>
                 </a>
 
-                <a href="https://drive.google.com/file/d/1QVx3fL4K-V1ILbpifHCNQfP0htSu5Wz6/view?usp=sharing">
+                <a href="https://drive.google.com/file/d/1QVx3fL4K-V1ILbpifHCNQfP0htSu5Wz6/view?usp=sharing" target="_blank">
                     <div class="training-item">
                         <img src="resources/activate_certificate cssparte2.jpg" alt="">
                         <h2>Curso de introducción al desarrollo web: HTML y CSS(2/2)</h2>
@@ -214,7 +214,7 @@
                     </div>
                 </a>
 
-                <a href="https://drive.google.com/file/d/15hkOQxnKxobtzDIPr3_3gaOND4p5z2kI/view?usp=sharing">
+                <a href="https://drive.google.com/file/d/15hkOQxnKxobtzDIPr3_3gaOND4p5z2kI/view?usp=sharing" target="_blank">
                     <div class="training-item">
                         <img src="resources/activate_certificate.jpg" alt="">
                         <h2>Curso de introducción al desarrollo web: HTML y CSS(1/2)</h2>
@@ -222,7 +222,7 @@
                     </div>
                 </a>
 
-                <a href="https://courses.cognitiveclass.ai/certificates/b06b30b11a6d44f5a50ce5eae05d308c">
+                <a href="https://courses.cognitiveclass.ai/certificates/b06b30b11a6d44f5a50ce5eae05d308c" target="_blank">
                     <div class="training-item">
                         <img src="resources/IBM PY0101EN CertificateCognitive Class.jpg"
                             alt="Python-101-for-Data-Science">
@@ -231,7 +231,7 @@
                     </div>
                 </a>
 
-                <a href="https://drive.google.com/file/d/1-HS8vXIR-MOjfWD99mfJ3Pb6aaamEbqp/view?usp=sharing">
+                <a href="https://drive.google.com/file/d/1-HS8vXIR-MOjfWD99mfJ3Pb6aaamEbqp/view?usp=sharing" target="_blank">
                     <div class="training-item">
                         <img src="resources/KevinArauz-NDG Linux Unhatc-certificate.jpg"
                             alt="NDGLinuxUnhatc-certificate">
@@ -240,7 +240,7 @@
                     </div>
                 </a>
 
-                <a href="https://drive.google.com/file/d/10pmRiwSlnAZjOTmqdTFOjwxdXViP4uUm/view?usp=sharing">
+                <a href="https://drive.google.com/file/d/10pmRiwSlnAZjOTmqdTFOjwxdXViP4uUm/view?usp=sharing" target="_blank">
                     <div class="training-item">
                         <img src="resources/KevinArauz-NDG Linux Essent-certificate.jpg"
                             alt="NDGLinuxEssent-certificate">
