--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
             <h1>Kevin Arauz</h1>
             <div class="containerLinks">
                 <p>👾 Jr.Developer | Jr.Software Engineer | Jr.FullStack</p>
-                <a class="githubLink" href="https://github.com/kjarj54">
+                <a class="githubLink" href="https://github.com/kjarj54" target="_blank">
                     <i class="bi bi-github"></i>
                 </a>
-                <a class="linkedinLink" href="https://www.linkedin.com/in/arauzkj/">
+                <a class="linkedinLink" href="https://www.linkedin.com/in/arauzkj/" target="_blank">
                     <i class="bi bi-linkedin"></i>
                 </a>
-                <a class="curriculumLink" href="">
+                <a class="curriculumLink" href="https://drive.google.com/file/d/1GMOP9ws9x6-NRHGbdkWaVY6qoH8dXy5E/view?usp=sharing" target="_blank">
                     <i class="bi bi-file-person"></i>
                 </a>
-                <a class="stackoverflowLink" href="https://stackoverflow.com/users/19321823/arauzkj">
+                <a class="stackoverflowLink" href="https://stackoverflow.com/users/19321823/arauzkj" target="_blank">
                     <i class="bi bi-stack-overflow"></i>
                 </a>
             </div>
