--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                 <a class="linkedinLink" href="https://www.linkedin.com/in/arauzkj/" target="_blank">
                     <i class="bi bi-linkedin"></i>
                 </a>
-                <a class="curriculumLink" href="https://drive.google.com/file/d/1GMOP9ws9x6-NRHGbdkWaVY6qoH8dXy5E/view?usp=sharing" target="_blank">
+                <a class="curriculumLink"
+                    href="https://drive.google.com/file/d/1GMOP9ws9x6-NRHGbdkWaVY6qoH8dXy5E/view?usp=sharing"
+                    target="_blank">
                     <i class="bi bi-file-person"></i>
                 </a>
                 <a class="stackoverflowLink" href="https://stackoverflow.com/users/19321823/arauzkj" target="_blank">
@@ -172,7 +174,13 @@
 
                     </div>
                 </a>
-
+                <a href="https://www.hackerrank.com/certificates/24a513910d5f" target="_blank">
+                    <div class="training-item">
+                        <img src="resources/java_basic certificate.jpg" alt="java_basic">
+                        <h2>Java (Basic) Certificate</h2>
+                        <h3>December 2023</h3>
+                    </div>
+                </a>
                 <a href="https://www.freecodecamp.org/certification/ArauzKJ/data-visualization" target="_blank">
                     <div class="training-item">
                         <img src="resources/Data Visualization.jpg" alt="data-visualization">
@@ -181,7 +189,8 @@
                     </div>
                 </a>
 
-                <a href="https://www.freecodecamp.org/certification/ArauzKJ/front-end-development-libraries" target="_blank">
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/front-end-development-libraries"
+                    target="_blank">
                     <div class="training-item">
                         <img src="resources/Front End Development Libraries.jpg" alt="front-end-development-libraries">
                         <h2>Front End Development Libraries</h2>
@@ -189,7 +198,8 @@
                     </div>
                 </a>
 
-                <a href="https://www.freecodecamp.org/certification/ArauzKJ/javascript-algorithms-and-data-structures" target="_blank">
+                <a href="https://www.freecodecamp.org/certification/ArauzKJ/javascript-algorithms-and-data-structures"
+                    target="_blank">
                     <div class="training-item">
                         <img src="resources/JavaScript Algorithms and Data Structures.jpg"
                             alt="javascript-algorithms-and-data-structures">
@@ -206,7 +216,8 @@
                     </div>
                 </a>
 
-                <a href="https://drive.google.com/file/d/1QVx3fL4K-V1ILbpifHCNQfP0htSu5Wz6/view?usp=sharing" target="_blank">
+                <a href="https://drive.google.com/file/d/1QVx3fL4K-V1ILbpifHCNQfP0htSu5Wz6/view?usp=sharing"
+                    target="_blank">
                     <div class="training-item">
                         <img src="resources/activate_certificate cssparte2.jpg" alt="">
                         <h2>Curso de introducción al desarrollo web: HTML y CSS(2/2)</h2>
@@ -214,7 +225,8 @@
                     </div>
                 </a>
 
-                <a href="https://drive.google.com/file/d/15hkOQxnKxobtzDIPr3_3gaOND4p5z2kI/view?usp=sharing" target="_blank">
+                <a href="https://drive.google.com/file/d/15hkOQxnKxobtzDIPr3_3gaOND4p5z2kI/view?usp=sharing"
+                    target="_blank">
                     <div class="training-item">
                         <img src="resources/activate_certificate.jpg" alt="">
                         <h2>Curso de introducción al desarrollo web: HTML y CSS(1/2)</h2>
@@ -222,7 +234,8 @@
                     </div>
                 </a>
 
-                <a href="https://courses.cognitiveclass.ai/certificates/b06b30b11a6d44f5a50ce5eae05d308c" target="_blank">
+                <a href="https://courses.cognitiveclass.ai/certificates/b06b30b11a6d44f5a50ce5eae05d308c"
+                    target="_blank">
                     <div class="training-item">
                         <img src="resources/IBM PY0101EN CertificateCognitive Class.jpg"
                             alt="Python-101-for-Data-Science">
@@ -231,7 +244,8 @@
                     </div>
                 </a>
 
-                <a href="https://drive.google.com/file/d/1-HS8vXIR-MOjfWD99mfJ3Pb6aaamEbqp/view?usp=sharing" target="_blank">
+                <a href="https://drive.google.com/file/d/1-HS8vXIR-MOjfWD99mfJ3Pb6aaamEbqp/view?usp=sharing"
+                    target="_blank">
                     <div class="training-item">
                         <img src="resources/KevinArauz-NDG Linux Unhatc-certificate.jpg"
                             alt="NDGLinuxUnhatc-certificate">
@@ -240,7 +254,8 @@
                     </div>
                 </a>
 
-                <a href="https://drive.google.com/file/d/10pmRiwSlnAZjOTmqdTFOjwxdXViP4uUm/view?usp=sharing" target="_blank">
+                <a href="https://drive.google.com/file/d/10pmRiwSlnAZjOTmqdTFOjwxdXViP4uUm/view?usp=sharing"
+                    target="_blank">
                     <div class="training-item">
                         <img src="resources/KevinArauz-NDG Linux Essent-certificate.jpg"
                             alt="NDGLinuxEssent-certificate">
