update(en proceso)

--- a/index.html
+++ b/index.html
@@ -267,6 +267,76 @@
 
         </section>
         <section id="proyectos">
+            <h1>Proyects</h1>
+            <div class="project-container">
+                <div class="project-item">
+                    <img src="" alt="">
+                    <h2>Proyect 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/Portafolio" target="_blank">
+                            <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <img src="" alt="">
+                    <h2>Proyect 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/Portafolio" target="_blank">
+                            <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <img src="" alt="">
+                    <h2>Proyect 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/Portafolio" target="_blank">
+                            <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <img src="" alt="">
+                    <h2>Proyect 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/Portafolio" target="_blank">
+                            <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
