--- a/index.html
+++ b/index.html
@@ -273,8 +273,6 @@
                     <img src="" alt="">
                     <h2>Proyect 1</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
-                    <iframe src="https://github.com/kjarj54/Portafolio" width="600" height="400"
-                        frameborder="0" scrolling="auto"></iframe>
 
                     <div class="icons-container">
                         <a href="https://github.com/kjarj54/Portafolio" target="_blank">
@@ -340,7 +338,9 @@
                     </div>
                 </div>
             </div>
+            <div class="repos-container">
 
+            </div>
         </section>
 
     </div>
